add distorsion and noice to the image

--- a/generator.ipynb
+++ b/generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,10 +144,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# def create_digit_image(digit, background_image, font_path, font_size, rotation, font_color=None):\n",
+    "#     # Prepare the rotated and cropped background\n",
+    "#     background_image = prepare_background_image(background_image)\n",
+    "\n",
+    "#     if font_color:\n",
+    "#         text_color = font_color\n",
+    "#     else:\n",
+    "#         # Get a color variant from the background image\n",
+    "#         text_color = get_dominant_color(background_image)\n",
+    "\n",
+    "#     # # Create a drawing context\n",
+    "#     # draw = ImageDraw.Draw(background_image)\n",
+    "\n",
+    "#     # Load the font\n",
+    "#     font = ImageFont.truetype(font_path, font_size)\n",
+    "\n",
+    "#     # Create a temporary image to rotate the text\n",
+    "#     temp_image = Image.new('RGBA', image_size, (255, 255, 255, 0))\n",
+    "#     temp_draw = ImageDraw.Draw(temp_image)\n",
+    "\n",
+    "#     # Get the size of the digit text\n",
+    "#     text_size = temp_draw.textbbox((0, 0), str(digit), font=font)[2:]  # Get width and height\n",
+    "#     text_position = ((image_size[0] - text_size[0]) // 2, (image_size[1] - text_size[1]) // 2 - 10)\n",
+    "\n",
+    "#     # Draw the digit on the temporary image\n",
+    "#     temp_draw.text(text_position, str(digit), font=font, fill=text_color)\n",
+    "\n",
+    "#     # Rotate the temporary image with the text\n",
+    "#     temp_image = temp_image.rotate(rotation, resample=Image.BICUBIC, expand=True)\n",
+    "\n",
+    "#     # distorsion\n",
+    "\n",
+    "\n",
+    "#     # Paste the rotated text onto the background image\n",
+    "#     background_image.paste(temp_image, (0, 0), temp_image)\n",
+    "\n",
+    "#     return background_image\n",
+    "\n",
+    "from PIL import ImageFilter\n",
+    "import numpy as np\n",
+    "\n",
     "def create_digit_image(digit, background_image, font_path, font_size, rotation, font_color=None):\n",
     "    # Prepare the rotated and cropped background\n",
     "    background_image = prepare_background_image(background_image)\n",
@@ -158,13 +199,11 @@
     "        # Get a color variant from the background image\n",
     "        text_color = get_dominant_color(background_image)\n",
     "\n",
-    "    # # Create a drawing context\n",
-    "    # draw = ImageDraw.Draw(background_image)\n",
-    "\n",
     "    # Load the font\n",
     "    font = ImageFont.truetype(font_path, font_size)\n",
     "\n",
     "    # Create a temporary image to rotate the text\n",
+    "    image_size = background_image.size\n",
     "    temp_image = Image.new('RGBA', image_size, (255, 255, 255, 0))\n",
     "    temp_draw = ImageDraw.Draw(temp_image)\n",
     "\n",
@@ -178,15 +217,30 @@
     "    # Rotate the temporary image with the text\n",
     "    temp_image = temp_image.rotate(rotation, resample=Image.BICUBIC, expand=True)\n",
     "\n",
-    "    # Paste the rotated text onto the background image\n",
-    "    background_image.paste(temp_image, (0, 0), temp_image)\n",
+    "    \n",
+    "    # Add distortion: Apply a filter for subtle distortion\n",
+    "    blur = random.choice([True, False])\n",
+    "    if blur:\n",
+    "        blur_amount = random.uniform(0.5, 1.9)\n",
+    "        temp_image = temp_image.filter(ImageFilter.GaussianBlur(blur_amount))  # Slight blur for a softened look\n",
     "\n",
-    "    return background_image"
+    "    # Add random noise\n",
+    "    noice=random.choice([True, False])\n",
+    "    if noice: \n",
+    "        noise = np.random.normal(0, 10, (temp_image.size[1], temp_image.size[0], 4))  # Gaussian noise\n",
+    "        noise_image = Image.fromarray(np.uint8(np.clip(noise + np.array(temp_image), 0, 255)))\n",
+    "    else:\n",
+    "        noise_image = temp_image\n",
+    "\n",
+    "    # Paste the distorted image onto the background image\n",
+    "    background_image.paste(noise_image, (0, 0), noise_image)\n",
+    "\n",
+    "    return background_image\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,21 +280,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing digits: 100%|██████████| 10/10 [04:29<00:00, 26.98s/Digit]\n"
+      "Processing digits: 100%|██████████| 10/10 [00:00<00:00, 30.67Digit/s]\n"
      ]
     }
    ],
    "source": [
     "# Create digits images with font color white\n",
     "generate_images('white_text_s50',\n",
-    "                num_samples_per_digit=2000,\n",
+    "                num_samples_per_digit=1,\n",
     "                font_color=(255,255,255)\n",
     "                )\n",
     "\n",
@@ -253,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
