--- a/generator.ipynb
+++ b/generator.ipynb
@@ -2,28 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pillow in c:\\anaconda\\envs\\graphviz3d\\lib\\site-packages (10.4.0)\n"
+     ]
+    }
+   ],
    "source": [
-    "# !pip install tqdm"
+    "# !pip install tqdm\n",
+    "# !pip install numpy\n",
+    "# !pip install pillow"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import random\n",
-    "from PIL import Image, ImageDraw, ImageFont\n",
-    "import numpy as np"
+    "from PIL import Image, ImageDraw, ImageFont,ImageFilter\n",
+    "import numpy as np\n",
+    "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -47,10 +58,12 @@
     "\n",
     "# Parameters for image generation\n",
     "image_size = (50, 50)\n",
-    "font_sizes = [int(image_size[0] * scale) for scale in np.linspace(0.7, 1.0, num=2)]  # Font sizes\n",
+    "\n",
+    "# Font sizes to be used for text generation\n",
+    "font_sizes = [int(image_size[0] * scale) for scale in np.linspace(0.7, 1.0, num=2)] \n",
     "rotations = range(-15, 15)  # Rotations from 0 to 15 degrees\n",
     "\n",
-    "\n",
+    "# when text color used from background color mean value, it add color_diff amount for r,g,b values to the mean value \n",
     "color_diff=50\n",
     "\n",
     "print(\"image size: \", image_size)\n",
@@ -60,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +90,7 @@
     "            pixel_counts[pixel] += 1\n",
     "\n",
     "    dominant_color = max(pixel_counts, key=pixel_counts.get)\n",
-    "    print(\"Dominant color: \", dominant_color)\n",
+    "    #print(\"Dominant color: \", dominant_color)\n",
     "    r, g, b = dominant_color\n",
     "    dc = [r, g, b]\n",
     "    for i in range(3):\n",
@@ -90,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,10 +199,8 @@
     "\n",
     "#     return background_image\n",
     "\n",
-    "from PIL import ImageFilter\n",
-    "import numpy as np\n",
     "\n",
-    "def create_digit_image(digit, background_image, font_path, font_size, rotation, font_color=None):\n",
+    "def create_digit_image(digit, background_image, font_path, font_size, rotation, font_color=None,filters_and_noice=False):\n",
     "    # Prepare the rotated and cropped background\n",
     "    background_image = prepare_background_image(background_image)\n",
     "\n",
@@ -220,13 +231,13 @@
     "    \n",
     "    # Add distortion: Apply a filter for subtle distortion\n",
     "    blur = random.choice([True, False])\n",
-    "    if blur:\n",
+    "    if blur and filters_and_noice:\n",
     "        blur_amount = random.uniform(0.5, 1.9)\n",
     "        temp_image = temp_image.filter(ImageFilter.GaussianBlur(blur_amount))  # Slight blur for a softened look\n",
     "\n",
     "    # Add random noise\n",
     "    noice=random.choice([True, False])\n",
-    "    if noice: \n",
+    "    if noice and filters_and_noice: \n",
     "        noise = np.random.normal(0, 10, (temp_image.size[1], temp_image.size[0], 4))  # Gaussian noise\n",
     "        noise_image = Image.fromarray(np.uint8(np.clip(noise + np.array(temp_image), 0, 255)))\n",
     "    else:\n",
@@ -240,13 +251,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tqdm import tqdm\n",
     "\n",
-    "def generate_images(col_name:str,num_samples_per_digit=5,font_color=None):\n",
+    "\n",
+    "def generate_images(col_name:str,num_samples_per_digit=5,font_color=None,filters_and_noice=False):\n",
     "    # Create directories to save the generated images\n",
     "    \n",
     "   \n",
@@ -268,7 +279,8 @@
     "                                       background_image, \n",
     "                                       font_path, \n",
     "                                       font_size, \n",
-    "                                       rotation,font_color=font_color)\n",
+    "                                       rotation,font_color=font_color,\n",
+    "                                       filters_and_noice=filters_and_noice)\n",
     "\n",
     "            # Save the image\n",
     "            image_filename = f'{output_dir}/digit_{digit}_{i}.png'\n",
@@ -280,22 +292,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing digits: 100%|██████████| 10/10 [00:00<00:00, 30.67Digit/s]\n"
+      "Processing digits:   0%|          | 0/10 [00:00<?, ?Digit/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing digits: 100%|██████████| 10/10 [04:45<00:00, 28.60s/Digit]\n"
      ]
     }
    ],
    "source": [
     "# Create digits images with font color white\n",
-    "generate_images('white_text_s50',\n",
-    "                num_samples_per_digit=1,\n",
-    "                font_color=(255,255,255)\n",
+    "generate_images('white_text_with_fblur_s50',\n",
+    "                num_samples_per_digit=2000,\n",
+    "                font_color=(255,255,255),filters_and_noice=True\n",
     "                )\n",
     "\n",
     "# Create digits images with font color white\n",
@@ -307,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
